# projet_visualisation

./: .env  README.md  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: PlotlyChart.jsx
src/projet_visualisations/: api.py  app.py  llm.py  vis_utils.py
