[project]
name = "projet-visualisations"
version = "0.1.0"
description = ""
authors = [
    {name = "root4036-ship-it",email = "root4036@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "projet_visualisations", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
